# python_build_ext

./: README.md  setup.cfg  setup.py
bext/: __init__.py
csrc/: bext.pyx  main.c  main.h
