[metadata]
name = bext
version = 0.0.2
description = Exmaple of build_ext , cython and numpy 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/amirhm
author = amirhm
author_email = amirhm@gmail.com
license = MIT

[options]
packages = find:

python_requires = >=3.6

[build_ext]
inplace=1

[options.packages.find]
exclude =
    tests*
    testing*